--- a/Assets/Resources/Localization/ko.csv
+++ b/Assets/Resources/Localization/ko.csv
@@ -17,12 +17,12 @@ credits_button,Credits
 quest_1000,시설에서 탈출
 quest_1001,해킹하여 몸을 강탈
 quest_1002,"[E]를 눌러 수리검을 던질 수 있습니다.<br>게이지가 가득차면\, [Q]를 눌러 몸을 강탈할 수 있습니다."
-quest_1003,필요한 해킹 게이지는 기물의 타입에 따라 다릅니다.
+quest_1003,필요한 해킹 게이지는 '기물'의 타입에 따라 다릅니다.
 quest_1005,저장소에 데이터 업로드
 quest_1006,콘솔과 상호작용
 quest_1007,밖으로 도달
-quest_1008,[우클릭]을 하여 '기물'의 고유 능력을 사용할 수 있습니다.<br>능력의 잔여 게이지를 확인할 수 있습니다.
-quest_1009,[Shift]를 눌러 대시를 사용할 수 있습니다. 대시의 잔여 게이지를 확인할 수 있습니다.
+quest_1008,[우클릭]을 하여 '기물'의 고유 능력을 사용할 수 있습니다.<br>좌측 하단에서 능력의 잔여 게이지를 확인할 수 있습니다.
+quest_1009,[Shift]를 눌러 대시를 사용할 수 있습니다.<br>대시의 잔여 게이지를 확인할 수 있습니다.
 quest_1010,감시 카메라는 당신의 현재 몸을 추적하여 주위 '기물'에게 알려줍니다.
 quest_1011,룩'의 방어막을 파괴하여 해킹할 수 있습니다.
 quest_1012,탈출로 탐색
