[Fix] 로컬라이징 범위 확대

--- a/Assets/Resources/Localization/en.csv
+++ b/Assets/Resources/Localization/en.csv
@@ -14,6 +14,15 @@ restart_checkpoint_button,Restart from CheckPoint
 return_game_button,Return to Game
 exit_menu_button,Exit to main menu
 credits_button,Credits
+objective_updated,OBJECTIVE UPDATED
+ar_boss_console,Console
+ar_camera,Camera
+ar_gate_console,Console
+ar_hackable_platform,Hackable
+ar_jump_pad,Hackable
+ar_elevator,Elevator
+ar_save_point,Save Point
+ar_shooter,Bishop
 quest_1000,Escape Facility
 quest_1001,Hack and Heist Body
 quest_1002,"Press [E] to throw Shuriken<br>When gauge is full\, press [Q] to heist body"
