--- a/Assets/Resources/Localization/ko.csv
+++ b/Assets/Resources/Localization/ko.csv
@@ -14,6 +14,15 @@ restart_checkpoint_button,마지막 체크포인트에서 다시 시작
 return_game_button,게임으로 돌아가기
 exit_menu_button,메뉴로 나가기
 credits_button,Credits
+objective_updated,목표 갱신
+ar_boss_console,콘솔
+ar_camera,감시 카메라
+ar_gate_console,콘솔
+ar_hackable_platform,해킹 가능
+ar_jump_pad,해킹 가능
+ar_elevator,엘리베이터
+ar_save_point,저장소
+ar_shooter,비숍
 quest_1000,시설에서 탈출
 quest_1001,해킹하여 몸을 강탈
 quest_1002,"[E]를 눌러 수리검을 던질 수 있습니다.<br>게이지가 가득차면\, [Q]를 눌러 몸을 강탈할 수 있습니다."
