--- a/Assets/Resources/Localization/ko.csv
+++ b/Assets/Resources/Localization/ko.csv
@@ -10,7 +10,7 @@ new_game_button,새 게임
 continue_button,이어서 하기
 settings_button,설정
 exit_game_button,나가기
-restart_checkpoint_button,마지막 체크포인트에서 다시 시작
+restart_checkpoint_button,체크포인트에서 다시 시작
 return_game_button,게임으로 돌아가기
 exit_menu_button,메뉴로 나가기
 credits_button,Credits
@@ -29,11 +29,11 @@ quest_1002,"[E]를 눌러 수리검을 던질 수 있습니다.<br>게이지가 
 quest_1003,필요한 해킹 게이지는 '기물'의 타입에 따라 다릅니다.
 quest_1005,저장소에 데이터 업로드
 quest_1006,콘솔과 상호작용
-quest_1007,밖으로 도달
+quest_1007,밖으로 나가기
 quest_1008,[우클릭]을 하여 '기물'의 고유 능력을 사용할 수 있습니다.<br>좌측 하단에서 능력의 잔여 게이지를 확인할 수 있습니다.
 quest_1009,[Shift]를 눌러 대시를 사용할 수 있습니다.<br>대시의 잔여 게이지를 확인할 수 있습니다.
 quest_1010,감시 카메라는 당신의 현재 몸을 추적하여 주위 '기물'에게 알려줍니다.
-quest_1011,룩'의 방어막을 파괴하여 해킹할 수 있습니다.
+quest_1011,'룩'의 방어막을 파괴하여 해킹할 수 있습니다.
 quest_1012,탈출경로 탐색
 quest_1013,생존
 quest_1016,회피 후 콘솔과 상호작용
@@ -41,11 +41,11 @@ quest_1017,감옥 탈출
 notify_2000,메인 서버 침투
 notify_2002,장애물을 뚫고
 notify_2003,백도어 탐색
-notify_2004,일렁이는 패드를 해킹하게되면 해당 패드를 활성화 및 비활성화할 수 있습니다.
+notify_2004,일렁이는 패드를 해킹하면 해당 패드를 활성화 및 비활성화 할 수 있습니다.
 notify_2006,위치 사수
-notify_2007,퀸' 탐색
-notify_3000,퀸' 처치
-notify_3001,퀸'의 서버 탐색
+notify_2007,'퀸' 탐색
+notify_3000,'퀸' 처치
+notify_3001,'퀸'의 서버 탐색
 notify_3002,서버 비활성화(0/3)
 notify_3003,서버 비활성화(1/3)
 notify_3004,서버 비활성화(2/3)
