[Fix] 로컬라이징 누락분 수정

--- a/Assets/Resources/Localization/en.csv
+++ b/Assets/Resources/Localization/en.csv
@@ -4,6 +4,18 @@ settings_invert_vertical_view,Invert Vertical View
 settings_master_volume,Master Volume
 settings_background_music,Background Music
 settings_sound_effect,Sound Effect
+settings_category_general,General
+settings_category_controls,Controls
+controls_desc_esc,"Esc: Back\, Skip"
+controls_desc_throw_shuriken,E: Throw Shuriken
+controls_desc_hack,Q: Hack
+controls_desc_move,WASD: Move
+controls_desc_interact,F: Interact
+controls_desc_dash,LShift: Dash
+controls_desc_jump,Space Bar: Jump
+controls_desc_attack,LClick: Attack
+controls_desc_ability,RClick: Ability
+controls_desc_rotate,Mouse Move: Rotate
 confirm_button,Confirm
 cancel_button,Cancel
 new_game_button,New Game
