--- a/Assets/Resources/Localization/ko.csv
+++ b/Assets/Resources/Localization/ko.csv
@@ -4,6 +4,18 @@ settings_invert_vertical_view,수직 반전
 settings_master_volume,전체 음량
 settings_background_music,배경 음악
 settings_sound_effect,효과음
+settings_category_general,일반
+settings_category_controls,조작키
+controls_desc_esc,"Esc: 뒤로 가기\, 스킵"
+controls_desc_throw_shuriken,E: 수리검 투척
+controls_desc_hack,Q: 해킹
+controls_desc_move,WASD: 이동
+controls_desc_interact,F: 상호작용
+controls_desc_dash,LShift: 대쉬
+controls_desc_jump,Space Bar: 점프
+controls_desc_attack,LClick: 공격
+controls_desc_ability,RClick: 능력
+controls_desc_rotate,Mouse Move: 회전
 confirm_button,확인
 cancel_button,취소
 new_game_button,새 게임
