스크립트 수정

--- a/Assets/Resources/Localization/ko.csv
+++ b/Assets/Resources/Localization/ko.csv
@@ -51,7 +51,7 @@ quest_1013,생존
 quest_1016,회피 후 콘솔과 상호작용
 quest_1017,감옥 탈출
 notify_2000,메인 서버 침투
-notify_2002,장애물을 뚫고
+notify_2002,장애물 돌파
 notify_2003,백도어 탐색
 notify_2004,일렁이는 패드를 해킹하면 해당 패드를 활성화 및 비활성화 할 수 있습니다.
 notify_2006,위치 사수
