[Feat]: 해상도 변경 테스트

--- a/Assets/Resources/Localization/en.csv
+++ b/Assets/Resources/Localization/en.csv
@@ -6,6 +6,7 @@ settings_background_music,Background Music
 settings_sound_effect,Sound Effect
 settings_category_general,General
 settings_category_controls,Controls
+settings_resolution,Resolution
 controls_desc_esc,"Esc: Back\, Skip"
 controls_desc_throw_shuriken,E: Throw Shuriken
 controls_desc_hack,Q: Hack
