--- a/Assets/Resources/Localization/ko.csv
+++ b/Assets/Resources/Localization/ko.csv
@@ -6,6 +6,7 @@ settings_background_music,배경 음악
 settings_sound_effect,효과음
 settings_category_general,일반
 settings_category_controls,조작키
+settings_resolution,해상도
 controls_desc_esc,"Esc: 뒤로 가기\, 스킵"
 controls_desc_throw_shuriken,E: 수리검 투척
 controls_desc_hack,Q: 해킹
